minor fix
