# src/main/java/com/example/autenticationservice/domain/model/GetUsernameResponse.java
@@ -1,0 +1,14 @@
+package com.example.autenticationservice.domain.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@Builder(toBuilder = true)
+@NoArgsConstructor
+@AllArgsConstructor
+public class GetUsernameResponse {
+    private String username;
+}
